--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ MedicAI/.env
 
 
 MedicAI/MedicAI_Backend/db_service/__pycache__
+MedicAI/MedicAI_Backend/ml_service/__pycache__
 MedicAI/MedicAI_Backend/__pycache__
 MedicAI/__pycache__
 MedicAI/MedicAI/__pycache__
